# autonomous-email-inbox-public

./: .gitignore  AGENT_INBOX_INTEGRATION_README.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS_FIXED.md  DEPLOYMENT_STEPS.md  LANGRAPH_PLATFORM_DEPLOYMENT_GUIDE.md  LANGSMITH_DEPLOYMENT_GUIDE.md  demo.py  env.langsmith  quick_test.py  setup_agentinbox_cron.sh  test_agentinbox_integration.py  test_langgraph_platform_integration.py  test_langsmith_integration.py
public_interface/: WORKING_VERSION.md  app.py  app_agentinbox.py  pyproject.toml  requirements.txt  vercel.json
public_interface/templates/: dashboard.html  dashboard_enhanced.html  error.html  index.html  public.html
src/email_assistant/tools/gmail/: agent_inbox_parser.py  langgraph-platform.json  langgraph_platform_fetcher.py  langsmith_parser.py  run_ingest_agentinbox.py  setup_cron_agentinbox.py
